# electricity-data-collector

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
airflow/: requirements.txt
airflow/dags/: entsoe_day_ahead_prices.py  entsoe_sync.py
data/: README.md
data/samples/generation_data/: consumo_PT_2021-05-21_2023-04-30.csv  eco2mix_FR_daily_2021-05-31_2024-12-31.csv  eco2mix_SP_daily_2021-05-21_2025-04-30.csv  gen_SP_1.json  gen_SP_2.json
data/samples/spain_france_portugal/: ES_GUI_ENERGY_PRICES_202012312300-202112312300.csv  ES_GUI_ENERGY_PRICES_202112312300-202212312300.csv  ES_GUI_ENERGY_PRICES_202212312300-202312312300.csv  ES_GUI_ENERGY_PRICES_202312312300-202412312300.csv  ES_GUI_ENERGY_PRICES_202412312300-202512312300.csv  FR_GUI_ENERGY_PRICES_202012312300-202112312300.csv  FR_GUI_ENERGY_PRICES_202112312300-202212312300.csv  FR_GUI_ENERGY_PRICES_202212312300-202312312300.csv  FR_GUI_ENERGY_PRICES_202312312300-202412312300.csv  FR_GUI_ENERGY_PRICES_202412312300-202512312300.csv  PT_GUI_ENERGY_PRICES_202012312300-202112312300.csv  PT_GUI_ENERGY_PRICES_202112312300-202212312300.csv  PT_GUI_ENERGY_PRICES_202212312300-202312312300.csv  PT_GUI_ENERGY_PRICES_202312312300-202412312300.csv  PT_GUI_ENERGY_PRICES_202412312300-202512312300.csv
edc/: __init__.py  config.py  entsoe_client.py  io_local.py  sync.py  transforms.py
notebooks/: 01_create_time_series.ipynb  show_parket.ipynb
scripts/: try_client.py
tests/: test_entsoe_client.py
